# rust_learn

./: README.md
actix-web-async-graphql/: Cargo.toml
actix-web-async-graphql/backend/: .env  Cargo.toml
actix-web-async-graphql/backend/migrations/: 20240412155419_create_user.down.sql  20240412155419_create_user.up.sql
actix-web-async-graphql/backend/src/: main.rs
actix-web-async-graphql/backend/src/dbs/: mysql.rs
actix-web-async-graphql/backend/src/form/: user.rs
actix-web-async-graphql/backend/src/gql/: mod.rs  mutations.rs  queries.rs
actix-web-async-graphql/backend/src/models/: user.rs
actix-web-async-graphql/backend/src/service/: user.rs
actix-web-async-graphql/backend/src/util/: constant.rs
concurrent-programming/: Cargo.toml
concurrent-programming/src/: main.rs
zero-to-production/: Cargo.toml  data.db
zero-to-production/src/: main.rs
