[package]
name = "actix-web-async-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "backend",
    "frontend-handlebars",
    "frontend-wasm"
]

resolver = "2"
[profile.dev]
split-debuginfo="unpacked"

[dependencies]
