[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 项目参考文档：https://mp.weixin.qq.com/s/qbj4HyxtnqcG6x_kBwqzKw

[dependencies]
actix-web = "4.5.1"
async-graphql = {version = "7.0.3",features = ["chrono"]}
rbatis = {version = "4.5.21",default-features = false, features = ["mysql", "postgres"]}
